# PolishNotation

./: CMakeLists.txt  PolishNotation.h  calc_tests.cpp.url  main.cpp  stackList.h
